backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: open-app
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    component: backend
