db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: open-app
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    component: database
