frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: open-app
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    component: frontend
