backend-egress-allow-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-egress-allow-database
  namespace: open-app
spec:
  podSelector:
    matchLabels:
      component: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          component: database
    ports:
    - port: 5432
      protocol: TCP
