default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: open-app
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
